Fixed styling of Projects page to look better on mobile

--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -1,11 +1,11 @@
 .container {
-  padding: 0 2rem;
   background-color: #2e3440;
   color: white;
 }
 
 .main {
   min-height: 100vh;
+  width: 100vw;
   padding: 4rem 0;
   flex: 1;
   display: flex;
@@ -16,12 +16,13 @@
 
 .projectstitle {
   min-height: 4vh;
+  text-align: center;
   width: 80vw;
-  border-bottom: 1px solid #eaeaea;
+  margin-right: 8vw;
 }
 
 .projectcontainer {
-  width: 100%;
+  width: 100vw;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -33,7 +34,11 @@
   margin-bottom: 2vh;
   padding-bottom: 2vh;
   border-style: solid;
-  min-width: 80%;
+  min-width: 88vw;
+  max-width: 98vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   border-color: white;
   border-radius: 2vw;
 }
